# tcr

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/: gifdec.hpp  stb_image_219_gif_patch.h  tcr_commons.h  tcr_emotes.h  tcr_render.h  tcr_script.h  tcr_script_align.h  tcr_text.h
res/: script.txt
res/emotes/: emotes.lib
src/: emotes-grabber.py  tcr_emotes.cpp  tcr_render.cpp  tcr_script.cpp  tcr_text.cpp  test.cpp
